--- a/src/components/Newsletter-Card/newsletter-card.styles.css
+++ b/src/components/Newsletter-Card/newsletter-card.styles.css
@@ -17,6 +17,7 @@
     text-align: center;
     padding: 2vw 4vw;
     height: 55vh;
+    margin-bottom: 3vh;
 }
 
 .newsletter-card-text span {
