--- a/src/components/PriceSlider/price-slider.styles.css
+++ b/src/components/PriceSlider/price-slider.styles.css
@@ -18,6 +18,7 @@
   font-size: 1vw;
   color: #635a5a;
   align-items: flex-start;
+  gap: 1vw;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -51,14 +52,14 @@ input[type=range]::-webkit-slider-thumb:active {
 }
 
 input[type="number"] {
-  padding: 0.3vw 0 0.3vw 0.1vw;
-  font-size: 0.8vw;
+  font-size: 1vw;
   color: #635a5a;
-  border: none;
+  border: 1px solid #635a5a;
+  border-radius: 10px;
 }
 
 input[type="number"]:last-child {
-  width: 2.9vw;
+  width: 3.7vw;
 }
 
 
