--- a/src/components/SearchResults/search-results.styles.css
+++ b/src/components/SearchResults/search-results.styles.css
@@ -15,3 +15,22 @@
     align-items: center;
     margin-top: 3vw;
 }
+
+@media screen and (max-width: 480px) {
+    .search-results-container {
+        margin: 5vh 0;
+    }
+
+    .result-title {
+        font-size: 5.5vw;
+    }
+
+    .search-results-cards {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        margin-top: 5vh;
+        gap: 5vh;
+    }
+}
